--- a/css/style.css
+++ b/css/style.css
@@ -119,14 +119,14 @@ footer h3{
     color: #f4f4f4;
     display: flex;
 }
- .team{
+ /* .team{
     background:url('../img/people.jpg') no-repeat center center/cover;
     flex:1;
-}
+}*/
  .team-info{
     flex:1;
     padding:1.25rem;
-}
+} 
 
 .team-info p{
     padding:1rem 0;
@@ -148,7 +148,8 @@ footer h3{
 }
 .photo-clients img{
     display: block;
-    width:60%;
+    width:80%;
+    margin: auto;
 }
 
 /* contact us form  */
@@ -182,4 +183,62 @@ footer{
 footer h3{
     color: #f4f4f4;
     font-size: 1rem;
+}
+
+@media (min-width:500px){
+    
+    .photo-clients img{
+        width: 60%;
+    }
+    /* navbar  */
+    .navbar .container{
+        display: flex;
+        justify-content: space-between;
+    }
+    .menu a {
+        display: block;
+        padding : 1.1rem 0.75rem;
+    }
+    .navbar ul{
+        padding: 0;
+    }
+    .navbar h1{
+        padding: 1.1rem 0.75rem;
+    }
+
+    /* who we are  */
+    .team{
+    background:url('../img/people.jpg') no-repeat center center/cover;
+    flex:1;
+}
+}
+
+@media (min-width:768px){
+    /* what we do  */
+    .info{
+        flex-direction: column;
+        text-align: center;
+    }
+    .align-horizontal{
+        display: flex;
+    }
+    .info{
+        margin:1rem;
+    }
+    .info h3{
+        padding-top: .5rem;
+    }
+}
+
+@media (min-width:1100px){
+    /* what we do  */
+    .info{
+        flex-direction: row;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .info i{
+        margin: 0;
+    }
 }
